# Vdragon_s_C_CPP_Libraries

./: .gitignore  CMakeLists.txt  README  README.md
Buildsystem_CMake/: .gitignore  CMakeLists.txt  README.md
Built_artifacts/: README.md
Complex_number_abstract_data_structure/: .cproject  .project
Complex_number_abstract_data_structure/Source_code/: testComplex.h
Complex_number_abstract_data_type/: .cproject  .project
Complex_number_abstract_data_type/Source_code/: testComplex.cpp  testComplex.h
Copy_algorithm/: Copy_algorithm.cbp
Copy_algorithm/Source_code/: Copy_algorithm.c  Copy_algorithm.h
Display_content_algorithm/: .cproject  .project
Display_content_algorithm/Source_code/: Test_program.c
Error/: .cproject  .project  Error.cbp  Error.geany.project  Makefile  README.md
Error/IDE_Eclipse_CDT/: .cproject  .project
Error/Source_code/: Testbench.cpp
File_system/IDE_CodeLite/: C_CPP_project_template.txt
File_system/IDE_Code__Blocks/: File_system.cbp
File_system/IDE_Eclipse_CDT/: .cproject  .project
File_system/IDE_Geany/: C_CPP_project_template.project
File_system/Source_code/: Error  main.cpp  pauseProgram  testSomething
Graph_abstract_data_structure/: main.c
Graph_abstract_data_type/: .cproject  .project  Test_program.c
Graph_abstract_data_type/GNU_toolchain/: .cproject  .project  Graph_ADT.cbp
Graph_abstract_data_type/Source_code/: Graph_abstract_data_type.h  Test_program.c  Test_program.h
Graph_data_structure_algorithm/: Graph_data_structure_algorithm.cbp
IDE_Code__Blocks/: Vdragon_s_C_CPP_Libraries.cbp  Vdragons_C_CPP_Libraries_Collection.cbp
Linked_List_abstract_data_type/GNU_toolchain/: .cproject  .project
Linked_List_abstract_data_type/Source_code/: Linked_List_abstract_data_structure_C.h
List_directory_files/: .cproject  .project  List_directory_files.cbp
List_directory_files/Source_code/: Test_program.c  listDirectoryFiles.c
Messages_templates/: .cproject  .project
Messages_templates/Resources/: Error_messages.cpp.old  stdlib.c.old
Messages_templates/Source_code/: Test_program.c  Test_program.cpp
Operate_resources_helper/: .cproject  .project  Test_file02.txt  Test_file03.txt
Operate_resources_helper/Source_code/: Test_program.c  Test_program.cpp
Operate_string_algorithm/Source_code/: Operate_string_algorithm.c  Operate_string_algorithm.h
PauseProgram/Source_code/: main.c  main.h
Portable_EOL_algorithm/: .cproject  .project  Portable_EOL_algorithm.cbp  README.txt
Portable_EOL_algorithm/IDE_Eclipse_CDT/: .cproject  .project
Portable_EOL_algorithm/Resources/: test_data02.CRLF.txt  test_data03.LF_CRLF_mixed.txt
Portable_EOL_algorithm/Source_code/: Test_program.cpp  Test_program.h
Project_specific_configurations/: .cproject  .project
Queue_abstract_data_type/: .cproject  .project
Queue_abstract_data_type/GNU_toolchain/: .cproject  .project
Queue_abstract_data_type/Source_code/: Queue_abstract_data_structure_C.h  Test_C.c  Test_CPP.cpp
Random_name_generator/GNU_toolchain/: .cproject  .project
Randomize_algorithm/: .cproject  .project  Randomize_algorithm.cbp
Randomize_algorithm/Source_code/: Randomize_algorithm.c  Test_program.c
Show_software_info/: .cproject  .project
Show_software_info/Source_code/: Show_software_info.h  Test_program.c  Test_program.h
Solve_equations_algorithms/: .cproject  .project
Solve_equations_algorithms/Source_code/: Test_program.cpp  Test_program.h
Sorting_algorithm/: .cproject  .project  Makefile  Sorting_algorithm.cbp
Sorting_algorithm/Source_code/: Bubble_sort.c  Heap_sort.c  Heap_sort.h  Sorting_algorithm.c  Sorting_algorithm.c.abandon_data  Sorting_algorithm.h  Test_program.c  (+1 more)
Source_code/: .gitignore  CMakeLists.txt  README.md  Unit_test.cpp  Unit_test.hpp
Source_code/00_Library_template/: CMakeLists.txt
Source_code/Copy_algorithm/: CMakeLists.txt  Copy_algorithm.h  README.md
Source_code/Error_C/: CMakeLists.txt  Error.c
Source_code/Linked_List_abstract_data_type/: CMakeLists.txt  Linked_List_abstract_data_type_C.c
Source_code/Messages/: Messages.c  Messages_Debug.h  Messages_Errors.h  Messages_Prompt.h
Source_code/Messages_templates/: CMakeLists.txt  Messages_templates.c  Messages_templates.h  README.md
Source_code/Messages_templates/zh_TW/: Debug.zh_TW.h  Warnings.zh_TW.h
Source_code/Portable_EOL_algorithm/CPP/: Portable_EOL_algorithm.hpp
Source_code/Portable_EOL_algorithm_CPP/: CMakeLists.txt  Portable_EOL_algorithm.cpp
Source_code/Swap_algorithm/: VCCL_Swap_algorithm_C.h  swapDouble.c  swapInteger.c  swapLongInteger.c  swapUnsignedShortInteger.c
Source_code/Swap_algorithm_C/: CMakeLists.txt  Swap_algorithm_C.h  Swap_algorithm_C_unit_test.c  Swap_algorithm_C_unit_test.h  swapDouble.c  swapInteger.c  swapLongInteger.c  swapUnsignedInteger.c  swapUnsignedShortInteger.c
Source_code/Time/: CMakeLists.txt  README.md  Time.c  Time.h
Source_code/calc_GCD_LCM/: CMakeLists.txt  calcGCD.c
Source_code/findMaxMin/: CMakeLists.txt
Source_code/listDirectoryFiles/: .gitignore  CMakeLists.txt  Makefile  listDirectoryFiles.c
Source_code/pauseProgram/: CMakeLists.txt  pauseProgram.c  pauseProgram.h
Source_code/portableGetCh/: CMakeLists.txt
Source_code/printSomething/: CMakeLists.txt  printSomething.c
Source_code/showSoftwareInfo/: .gitignore  CMakeLists.txt  README.md  showSoftwareInfo.c  showSoftwareInfo.h
Source_code/testSomething/C/: testSomething.c  testSomething.h
Source_code/testSomething_C/: CMakeLists.txt  testSomething.c
Stack_abstract_data_type/: .cproject  .project
Swap_algorithm/: .cproject  .project  Swap_algorithm.cbp
Time/: Makefile
calc_GCD_LCM/: calc_GCD_LCM.cbp
findMaxMin/: .cproject  .project  findMaxMin.cbp
listDirectoryFiles/: listDirectoryFiles.cbp
pauseProgram/: .cproject  .project  PauseProgram.cbp  pauseProgram.cbp
portableEOLalgorithm/: .cproject  .project  test_data01.LF.txt
portableGetCh/: .cproject  .project
printSomething/: .project  README.md  printSomething.cbp
showSoftwareInfo/: .cproject  .project  Makefile
testSomething/: README.md  testSomething.cbp
(+188 files in other folders)
